Fix Portfolio card text overflow for Mobile M

--- a/src/components/Contact/ContactStyles.scss
+++ b/src/components/Contact/ContactStyles.scss
@@ -4,6 +4,7 @@
   padding: 2rem;
   background: #003329;
   color: white;
+  padding-bottom: 3rem;
 
   --fs-title: clamp(2rem, 8vw, 4rem);
   --fs-subtitle: clamp(1rem, 6vw, 2rem);
@@ -12,5 +13,9 @@
     font-size: var(--fs-title);
     margin: 4% 0 3% 0;
     align-self: center;
+  }
+  .icons {
+    display: flex;
+    justify-content: space-evenly;
   }
 }
