--- a/src/components/Contact/IconStyles.scss
+++ b/src/components/Contact/IconStyles.scss
@@ -1,5 +1,12 @@
 .iconContainer {
-  p {
+  a {
+    position: relative;
     font-size: 6rem;
+    transition: 0.6s;
+    color: black;
+
+    :hover {
+      font-size: 8rem;
+    }
   }
 }
