--- a/src/components/Portfolio/PortfolioStyles.scss
+++ b/src/components/Portfolio/PortfolioStyles.scss
@@ -22,7 +22,7 @@
     display: grid;
     justify-content: center;
     grid-template-columns: 50% 50%;
-    margin: 0 7rem 0;
+    margin: 0 5vw 0;
     gap: 4%;
   }
 }
